<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_header"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:background="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/logo_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="9dp"
                android:contentDescription="@string/logo_github"
                android:src="@drawable/ic_github_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:background="@drawable/bg_ripple"
            android:gravity="center"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/logo_app_name"
            app:layout_constraintEnd_toStartOf="@+id/btn_settings"
            app:layout_constraintTop_toTopOf="@+id/logo_app_name">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/favorite_logo"
                android:src="@drawable/ic_favorite_false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_ripple"
            android:gravity="center"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/logo_app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logo_app_name">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/settings_logo"
                android:src="@drawable/ic_settings" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_app_name"
            tools:layout_editor_absoluteX="18dp">

            <EditText
                android:id="@+id/et_search_user"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/bg_radius_white"
                android:drawableStart="@drawable/ic_search_darkgraytransparent"
                android:drawablePadding="16dp"
                android:fontFamily="@font/muli"
                android:hint="@string/search_user"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="18dp"
                android:paddingEnd="58dp"
                android:paddingBottom="1dp"
                android:textColor="@color/colorDarkGrayTransparent"
                android:textColorHint="@color/colorDarkGrayTransparent"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="Autofill,RtlSymmetry" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/ic_clear"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/bg_top_radius_lightgray"
        android:padding="18dp"
        app:layout_constraintTop_toTopOf="@+id/constraint_header"
        tools:layout_editor_absoluteX="18dp">

        <LinearLayout
            android:id="@+id/guide"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="18dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/row_of_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_light"
                    android:text="@string/please_use_the"
                    android:textColor="@color/colorGray"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginHorizontal="6dp"
                    android:src="@drawable/ic_search_gray"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_light"
                    android:text="@string/search_field"
                    android:textColor="@color/colorGray"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_light"
                android:gravity="center"
                android:text="@string/to_find_the_github_user_you_want"
                android:textColor="@color/colorGray"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/row_of_one" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_github_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_row" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading"
        style="@style/SpinKitView.Large.Pulse"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>